--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 				<header>
 					<h1>Gabriel Sotelo</h1>
 					<p>This is me</p>
+					<ul class="icons" style="margin-top:10px">
+						<li><a href="https://github.com/Gabaloo1" class="icon brands fa-github fa-2x"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/gabriel-sotelo/" class="icon brands fa-linkedin-in fa-2x"><span class="label">LinkedIn</span></a></li>
+					</ul>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Learn More</a>
@@ -30,11 +34,17 @@
 				<header>
 					<h2>About Me</h2>
 				</header>
-				<p>Undergrad, programmer, and enthusiast. <br />
-                    Untiringly endeavoring to enjoy and excel in all I think and do for 17 years. <br />
-                    CS, Tech, AI -and languages- geek!</p>
+				<p>Undergrad, programmer, and full-stack enthusiast. <br />
+                    Untiringly endeavoring to enjoy and excel in all I think and do for 18 years. <br />
+                    Coding | Tech | AI | Languages</p>
 				<footer>
-					<a href="https://drive.google.com/file/d/1HC7TnqW93Nabjbjo6PLwhYuyiFR70AX2/view?usp=sharing" class="button style2 scrolly">See my Resume</a>
+					<a href="https://drive.google.com/file/d/1HC7TnqW93Nabjbjo6PLwhYuyiFR70AX2/view?usp=sharing" class="button style2 scrolly" target="_blank">See my Resume</a>
+				</footer>
+				<footer>
+					<a href="/portfolio" class="button style2 scrolly" target="_blank">Visit my Portfolio</a>
+				</footer>
+				<footer>
+					<a href="https://gabrielsotelo.medium.com/" class="button style2 scrolly" target="_blank">Check out my Blog</a>
 				</footer>
 			</section>
 
@@ -43,22 +53,32 @@
 				<a href="https://msu.edu/" class="image fit"><img src="images/msu.jpg" alt=""/></a>
 				<div class="inner">
 					<header>
-						<h2>Computer Sci.,<br />
-						Math, and Data Sci. Student</h2>
+						<h2>My Education</h2>
 					</header>
-					<p>Pursuing a career and opportunity path at Michigan State University <br />-Class of 2024-. Proud member of the Honors College, and Dean's List student.</p>
+					<p>Pursuing a career and opportunity path in Computer Science at Michigan State University - Class of 2024.<br /><br />Self-taught along the way for most of what I've done, acquiring knowledge everywhere.</p>
 				</div>
 			</article>
 
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/skills.jpg" alt="" /></a>
+				<a class="image fit" href="https://www.msuaiclub.com/"><img src="images/aiclub.png" alt="" style="display:block;margin-left:auto;margin-right:auto;width:101%;"/></a>
+				<div class="inner">
+					<header>
+						<h2>My experience</h2>
+					</header>
+					<p>CTO of the <a href="https://www.msuaiclub.com/">Artificial Intelligence Club at MSU</a> (and founding member)<br/><br/>Backend developer for SpartaHack 22.<br/><br/>Teaching Assistant for the "Programming I" (Python) class at MSU.<br/><br/>Peer Leader for first-year engineers (<a href="https://core.egr.msu.edu/">CoRe</a>).</p>
+				</div>
+			</article>
+
+
+			<article class="container box style1 right">
+				<a class="image fit"><img src="images/skills.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Some of<br />
 						my skills</h2>
 					</header>
-					<p>I speak English, Spanish and Mandarin -currently learning Japanese-. <br /> I enjoy playing the guitar and piano. <br /> See alongside some of my computer                               programming skills <br /> Never stop learning! </p>
+					<p>I speak English, Spanish, and Mandarin -currently learning Japanese-. <br /> I enjoy playing the guitar and piano. <br /> See alongside some of my computer programming skills <br /> Never stop learning! </p>
 				</div>
 			</article>
 
@@ -67,7 +87,8 @@
 				<header>
 					<h2>Project Gallery</h2>
 					<p>Visit, try, and review some of my<br />
-					own personal projects.</p>
+					personal projects.<br />
+					Check out my <a href="/portfolio">portfolio</a> for more.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row gtr-0">
@@ -259,10 +280,8 @@
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="https://github.com/Gabaloo1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="https://twitter.com/GabrielSoteloJu" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/gabrielcarlos.sotelojusto/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="https://www.linkedin.com/in/gabriel-sotelo/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://www.youtube.com/channel/UCZv2KBOXIMDp0r9v_gJzSrQ" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+        <li><a href="https://www.youtube.com/channel/UCZv2KBOXIMDp0r9v_gJzSrQ" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
