--- a/files/index.html
+++ b/files/index.html
@@ -25,7 +25,7 @@
 					</ul>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Learn More</a>
+					<a href="#banner" class="button style2 scrolly-middle">See More</a>
 				</footer>
 			</section>
 
